# DAENet

./: CMakeLists.txt  Dockerfile  README.MD  README.md  Sharp.h  dae-socket.config  dae-socket.config.1  loopix-socket.config  main.cpp  node_ids.txt  run.md  run_instance.sh  test_deaddrop_communication.sh  tor-socket.config
app/: CMakeLists.txt  daemon.cpp  service.hpp
app/buffersend/: BufferSend.cpp  BufferSend.hpp
app/filesharing/: AnonymousP2p.hpp  FileHeader.hpp  FileService.cpp  FileService.hpp  FileTask.cpp  FileTask.hpp  md5.h
app/pingpong/: PingPongServer.cpp  PingPongServer.hpp
interface/: interface.hpp
interface/dae/: DAESocket.hpp
interface/loopix/: LoopixSocket.cpp
interface/tcp/: AnonymousSocket.cpp
interface/tor/: TorSocket.cpp
message/: message.hpp  message.md
obfuscation/: DirectPool.cpp  PoissionPool.cpp  ShufflePool.cpp
p2p/: DAENode.hpp  DAEProtocol.cpp
packet/: IPPacket.cpp  header.h  packet.h  types.h  unaligned.h
protocol/: analysis.md  protocol v0.4.md  protocol v0.5.md
relay/: RandomSocket.cpp  RandomSocket.hpp  RelayConfig.cpp  RelayConfig.hpp  SocketHeader.cpp  SocketHeader.hpp
scripts/: Makefile  attach-swarm.sh  chord.py  config.json  config.sh  deploy-dae.py  deploy-loopix.py  deploy-swarm.sh  deploy-tcp.py  deploy-tor.py  deploy_environment.py  docker-compose.yml  docker-run.sh  generate_ids.py  loopix_backend.py  run  tc.py
simulation/: PoolUser.hpp
src/: EventManager.cpp  EventManager.hpp
src/interface/: c_network.h
src/interface/dae/: DAESocket.cpp
src/interface/tor/: TorSocket.hpp
src/obfuscation/: DirectPool.hpp  FuzzingPool.cpp  FuzzingPool.hpp  PoissionPool.hpp  ShufflePool.hpp  UniformPool.cpp  UniformPool.hpp
src/p2p/: DAENode.cpp  DAEProtocol.hpp  DAEService.hpp
src/packet/: AnonymousPacket.cpp  AnonymousPacket.hpp  IPPacket.hpp  packet.c  packet_checksum.c
src/relay/: RelayConfig.hpp
src/simulation/: DAEProtocolSimulator.cpp  DAEProtocolSimulator.hpp  DAESimulator.cpp  DAESimulator.hpp  PoolSimulator.cpp  PoolSimulator.hpp  PoolUser.cpp
src/utils/: ConcurrentBlockQueue.cpp  ConcurrentBlockQueue.hpp  ConcurrentRandomQueue.hpp  Daemon.hpp  EventTask.cpp  EventTask.hpp  SharpTunnel.cpp  SharpTunnel.h
test/: testCryptoSpeed.cpp  test_DAE_protocol_simulator.cpp  test_DAE_simulator.cpp  test_deaddrop_client.cpp  test_deaddrop_server.cpp  test_heap.cpp  test_libevent.cpp  test_ordervector.cpp  test_pingpong_client.cpp  test_pingpong_server.cpp  test_simulator.cpp
utils/: ConcurrentHeap.hpp  ConcurrentQueue.hpp  Daemon.cpp  Heap.cpp  Heap.hpp  NeighbouringSet.cpp  NeighbouringSet.hpp  OrderedVector.cpp  OrderedVector.hpp  RandomGenerator.hpp
